--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>2.12.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.30.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
